--- a/supporting-blog-content/re-ranking-elasticsearch-hosted/re-ranking-elasticsearch-hosted.ipynb
+++ b/supporting-blog-content/re-ranking-elasticsearch-hosted/re-ranking-elasticsearch-hosted.ipynb
@@ -86,11 +86,31 @@
    "cell_type": "markdown",
    "source": [
     "## Create an Elasticsearch Python client\n",
-    "\n",
-    "We are using an Elastic Cloud cloud_id and deployment (cluster) API key."
+    "\n"
    ],
    "metadata": {
     "id": "gsQ4XIpkbpd4"
+   }
+  },
+  {
+   "cell_type": "markdown",
+   "source": [
+    "## Free Trial\n",
+    "If you don't have an Elasticsearch cluster, or what one to test out. Head over to [cloud.elastic.co](https://cloud.elastic.co/registration?onboarding_token=search&cta=cloud-registration&tech=trial&plcmt=article%20content&pg=search-labs) and sign up. You can sign up and have a serverless project up and running in only a few mintues!"
+   ],
+   "metadata": {
+    "id": "M_JppGte1Wc5"
+   }
+  },
+  {
+   "cell_type": "markdown",
+   "source": [
+    "We are using an Elastic Cloud cloud_id and deployment (cluster) API key.\n",
+    "\n",
+    "[See this guide](https://www.elastic.co/search-labs/tutorials/install-elasticsearch/elastic-cloud) for finding the `cloud_id` and creating an `api_key`"
+   ],
+   "metadata": {
+    "id": "gdsEjwhV1tr5"
    }
   },
   {
