--- a/supporting-blog-content/re-ranking-elasticsearch-hosted/re-ranking-elasticsearch-hosted.ipynb
+++ b/supporting-blog-content/re-ranking-elasticsearch-hosted/re-ranking-elasticsearch-hosted.ipynb
@@ -361,7 +361,7 @@
    "cell_type": "markdown",
    "source": [
     "## Download Dataset\n",
-    "**Note** You may get a warking *The secret `HF_TOKEN` does not exist in your Colab secrets*.\n",
+    "**Note** You may get a warning *The secret `HF_TOKEN` does not exist in your Colab secrets*.\n",
     "\n",
     "You can safely ignore this."
    ],
