fixed index name

--- a/supporting-blog-content/re-ranking-elasticsearch-hosted/re-ranking-elasticsearch-hosted.ipynb
+++ b/supporting-blog-content/re-ranking-elasticsearch-hosted/re-ranking-elasticsearch-hosted.ipynb
@@ -3,8 +3,7 @@
  "nbformat_minor": 0,
  "metadata": {
   "colab": {
-   "provenance": [],
-   "toc_visible": true
+   "provenance": []
   },
   "kernelspec": {
    "name": "python3",
@@ -44,7 +43,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {
     "id": "2Xz9uWQFbNkH"
    },
@@ -79,7 +78,7 @@
    "metadata": {
     "id": "CsL466H0bjNX"
    },
-   "execution_count": 2,
+   "execution_count": null,
    "outputs": []
   },
   {
@@ -226,7 +225,7 @@
     },
     "outputId": "d58cc940-281e-4d56-d6e6-040e4881e78a"
    },
-   "execution_count": 6,
+   "execution_count": null,
    "outputs": [
     {
      "output_type": "execute_result",
@@ -277,7 +276,7 @@
     },
     "outputId": "d9e68225-5796-411e-964a-6db3be5541aa"
    },
-   "execution_count": 7,
+   "execution_count": null,
    "outputs": [
     {
      "output_type": "execute_result",
@@ -336,7 +335,7 @@
     "outputId": "4bc9ba0b-9be3-410a-d1d6-f1da04bbfec7",
     "id": "DPADF_7ytTmR"
    },
-   "execution_count": 9,
+   "execution_count": null,
    "outputs": [
     {
      "output_type": "stream",
@@ -361,7 +360,7 @@
    "cell_type": "markdown",
    "source": [
     "## Download Dataset\n",
-    "**Note** You may get a warning *The secret `HF_TOKEN` does not exist in your Colab secrets*.\n",
+    "**Note** You may get a warking *The secret `HF_TOKEN` does not exist in your Colab secrets*.\n",
     "\n",
     "You can safely ignore this."
    ],
@@ -381,7 +380,7 @@
     "id": "IVnpj5bBoEBL",
     "outputId": "bc6371d9-d66f-482c-95f8-8cdb89e4f0ef"
    },
-   "execution_count": 10,
+   "execution_count": null,
    "outputs": [
     {
      "output_type": "stream",
@@ -434,7 +433,7 @@
    "metadata": {
     "id": "tDZ0qEbW-ozW"
    },
-   "execution_count": 11,
+   "execution_count": null,
    "outputs": []
   },
   {
@@ -463,7 +462,7 @@
     "\n",
     "# Query scored from score\n",
     "response_scored = es.search(\n",
-    "    index=\"arxiv-papers-lexical\",\n",
+    "    index=\"arxiv-papers\",\n",
     "    body={\n",
     "        \"size\": 10,\n",
     "        \"retriever\": {\"standard\": {\"query\": {\"match\": {\"title\": query}}}},\n",
@@ -474,7 +473,7 @@
     "\n",
     "# Query with Semantic Reranker\n",
     "response_reranked = es.search(\n",
-    "    index=\"arxiv-papers-lexical\",\n",
+    "    index=\"arxiv-papers\",\n",
     "    body={\n",
     "        \"size\": 10,\n",
     "        \"retriever\": {\n",
@@ -494,7 +493,7 @@
    "metadata": {
     "id": "HWXQBS35jQ3n"
    },
-   "execution_count": 12,
+   "execution_count": null,
    "outputs": []
   },
   {
@@ -531,12 +530,12 @@
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/",
-     "height": 380
+     "height": 415
     },
     "id": "yTTNYCYcBtll",
     "outputId": "0f0af538-13fd-4e62-e3d2-1dd185689904"
    },
-   "execution_count": 17,
+   "execution_count": null,
    "outputs": [
     {
      "output_type": "execute_result",
@@ -649,7 +648,7 @@
     },
     "outputId": "e83318ad-ca42-4aa7-98d4-37c4428eb70a"
    },
-   "execution_count": 14,
+   "execution_count": null,
    "outputs": [
     {
      "output_type": "stream",
