--- a/notebooks/enterprise-search/app-search-engine-exporter.ipynb
+++ b/notebooks/enterprise-search/app-search-engine-exporter.ipynb
@@ -606,10 +606,10 @@
     "        \"service_settings\": {\n",
     "            \"model_id\": \".elser_model_2_linux-x86_64\",\n",
     "            \"num_allocations\": 1,\n",
-    "            \"num_threads\": 1\n",
+    "            \"num_threads\": 1,\n",
     "        }\n",
     "    },\n",
-    "    task_type=\"sparse_embedding\"\n",
+    "    task_type=\"sparse_embedding\",\n",
     ")\n"
    ]
   },
@@ -645,7 +645,7 @@
     "# and for our text fields, add a \"copy_to\" directive to copy the text to the semantic_text field\n",
     "for field_name in SEMANTIC_TEXT_FIELDS:\n",
     "    semantic_field_name = field_name + \"_semantic\"\n",
-    "    mapping[field_name].update({ \"copy_to\": semantic_field_name })\n",
+    "    mapping[field_name].update({\"copy_to\": semantic_field_name})\n",
     "\n",
     "elasticsearch.indices.put_mapping(index=DEST_INDEX, properties=mapping)"
    ]
@@ -950,9 +950,7 @@
     "payload = app_search_query_payload.copy()\n",
     "\n",
     "for semantic_text_query in semantic_text_queries:\n",
-    "    payload[\"query\"][\"rule\"][\"organic\"][\"bool\"][\"should\"].append(\n",
-    "        semantic_text_query\n",
-    "    )\n",
+    "    payload[\"query\"][\"rule\"][\"organic\"][\"bool\"][\"should\"].append(semantic_text_query)\n",
     "\n",
     "print(f\"Elasticsearch payload:\\n{json.dumps(payload, indent=2)}\\n\")"
    ]
