update text, spelling and clarity

--- a/notebooks/enterprise-search/app-search-engine-exporter.ipynb
+++ b/notebooks/enterprise-search/app-search-engine-exporter.ipynb
@@ -579,7 +579,7 @@
    "source": [
     "# Add semantic text fields for semantic search (optional)\n",
     "\n",
-    "One of the advantages of having our exported index directly in Elasticsearch is that we can easily take advantage of doing semantic search with ELSER. To do this, we'll need to add an inference endpoint using ELSER, and a `semantic_text` field to our index to use it.\n",
+    "One of the advantages of exporting our index directly to Elasticsearch is that we can easily perform semantic search with ELSER. To do this, we'll need to add an inference endpoint using ELSER, and a `semantic_text` field to our index to use it.\n",
     "\n",
     "Note that to use this feature, your cluster must have at least one ML node set up with enough resources allocated to it.\n",
     "\n",
@@ -655,7 +655,7 @@
    "metadata": {},
    "source": [
     "## Reindex the data\n",
-    "Now that we have created the Elasticsearch index, it's time to reindex our data in the new index. If you are using the `semantic_text` fields as defined above with a `_semantic` suffix, and then the reindexing process with automatically infer the sparse vector values from ELSER and use those for the vectors as the reindex takes place."
+    "Now that we have created the Elasticsearch index, it's time to reindex our data in the new index. If you are using the `semantic_text` fields as defined above with a `_semantic` suffix, and then the reindexing process will automatically infer the sparse vector values from ELSER and use those for the vectors as the reindex takes place."
    ]
   },
   {
@@ -816,7 +816,7 @@
     "                    ]\n",
     "                }\n",
     "            },\n",
-    "            \"ruleset_ids\": ENGINE_NAME,\n",
+    "            \"ruleset_ids\": [ENGINE_NAME],\n",
     "            \"match_criteria\": {\"user_query\": QUERY_STRING},\n",
     "        }\n",
     "    },\n",
@@ -910,7 +910,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### How to combine App Search queries with Semantic Text\n",
+    "### How to combine App Search queries with semantic text\n",
     "\n",
     "We will now provide an example on how to combine the previous two queries into a single query that applies both BM25 search and semantic search.\n",
     "In the previous examples, we have a `bool` query with `should` clauses.\n",
