linter / black reformatted

--- a/notebooks/enterprise-search/app-search-engine-exporter.ipynb
+++ b/notebooks/enterprise-search/app-search-engine-exporter.ipynb
@@ -202,7 +202,7 @@
     "        }\n",
     "    )\n",
     "\n",
-    "elasticsearch.query_rules.put_ruleset(ruleset_id=ENGINE_NAME, rules=query_rules)\n"
+    "elasticsearch.query_rules.put_ruleset(ruleset_id=ENGINE_NAME, rules=query_rules)"
    ]
   },
   {
@@ -299,7 +299,7 @@
     "\n",
     "# delete the index if it's already created\n",
     "if elasticsearch.indices.exists(index=DEST_INDEX):\n",
-    "    elasticsearch.indices.delete(index=DEST_INDEX)\n"
+    "    elasticsearch.indices.delete(index=DEST_INDEX)"
    ]
   },
   {
@@ -360,7 +360,7 @@
     "        \"type\": \"synonym_graph\",\n",
     "        \"synonyms_set\": ENGINE_NAME,\n",
     "        \"updateable\": True,\n",
-    "    },    \n",
+    "    },\n",
     "}"
    ]
   },
@@ -550,8 +550,7 @@
     "            \"index_options\": \"freqs\",\n",
     "            \"analyzer\": \"i_text_base\",\n",
     "            \"search_analyzer\": \"q_text_base\",\n",
-    "        }\n",
-    "\n"
+    "        }"
    ]
   },
   {
@@ -600,17 +599,17 @@
     "\n",
     "# and create our endpoint using the ELSER v2 model\n",
     "elasticsearch.inference.put(\n",
-    "    inference_id='elser_inference_endpoint',\n",
+    "    inference_id=\"elser_inference_endpoint\",\n",
     "    inference_config={\n",
     "        \"service\": \"elasticsearch\",\n",
     "        \"service_settings\": {\n",
     "            \"model_id\": \".elser_model_2_linux-x86_64\",\n",
     "            \"num_allocations\": 1,\n",
     "            \"num_threads\": 1,\n",
-    "        }\n",
+    "        },\n",
     "    },\n",
     "    task_type=\"sparse_embedding\",\n",
-    ")\n"
+    ")"
    ]
   },
   {
@@ -788,7 +787,6 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "\n",
     "app_search_query_payload = {\n",
     "    \"query\": {\n",
     "        \"rule\": {\n",
