--- a/supporting-blog-content/hybrid-search-for-an-e-commerce-product-catalogue/product-store-search/ingestion/ingestion.ipynb
+++ b/supporting-blog-content/hybrid-search-for-an-e-commerce-product-catalogue/product-store-search/ingestion/ingestion.ipynb
@@ -50,7 +50,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Step 1: Elasticsearch client setup using cloud configuration\n"
+    "# Step 1: Elasticsearch client setup using cloud configuration"
    ]
   },
   {
@@ -63,12 +63,9 @@
     "    \"\"\"\n",
     "    Initializes Elasticsearch client using cloud_id and api_key from config.yml\n",
     "    \"\"\"\n",
-    "    with open('../config.yml', 'r') as file:\n",
+    "    with open(\"../config.yml\", \"r\") as file:\n",
     "        config = yaml.safe_load(file)\n",
-    "    return Elasticsearch(\n",
-    "        cloud_id=config['cloud_id'],\n",
-    "        api_key=config['api_key']\n",
-    "    )"
+    "    return Elasticsearch(cloud_id=config[\"cloud_id\"], api_key=config[\"api_key\"])"
    ]
   },
   {
@@ -88,7 +85,7 @@
     "    \"\"\"\n",
     "    Generates sentence embeddings using pre-trained model 'all-MiniLM-L6-v2'.\n",
     "    \"\"\"\n",
-    "    model = SentenceTransformer('sentence-transformers/all-MiniLM-L6-v2')\n",
+    "    model = SentenceTransformer(\"sentence-transformers/all-MiniLM-L6-v2\")\n",
     "    embeddings = model.encode(sentences)\n",
     "    return embeddings"
    ]
@@ -110,7 +107,7 @@
     "    \"\"\"\n",
     "    Reads and loads the dataset from a JSON file.\n",
     "    \"\"\"\n",
-    "    with open(file_path, 'r') as file:\n",
+    "    with open(file_path, \"r\") as file:\n",
     "        data = json.load(file)\n",
     "    return data"
    ]
@@ -133,7 +130,7 @@
     "    Yields chunks of data in batch sizes for bulk indexing in Elasticsearch.\n",
     "    \"\"\"\n",
     "    for i in range(0, len(data), batch_size):\n",
-    "        yield data[i:i + batch_size]"
+    "        yield data[i : i + batch_size]"
    ]
   },
   {
@@ -155,13 +152,9 @@
     "    Adds 'description_embeddings' by encoding the 'description' field.\n",
     "    \"\"\"\n",
     "    for item in data_batch:\n",
-    "        document_id = item['id']\n",
-    "        item['description_embeddings'] = get_text_vector(item['description'])\n",
-    "        yield {\n",
-    "            \"_index\": index_name,\n",
-    "            \"_id\": document_id,\n",
-    "            \"_source\": item\n",
-    "        }"
+    "        document_id = item[\"id\"]\n",
+    "        item[\"description_embeddings\"] = get_text_vector(item[\"description\"])\n",
+    "        yield {\"_index\": index_name, \"_id\": document_id, \"_source\": item}"
    ]
   },
   {
@@ -188,9 +181,10 @@
     "        success, failed = helpers.bulk(get_client_es(), actions)\n",
     "        print(f\"Batch indexed: {success} successful, {failed} failed\")\n",
     "\n",
+    "\n",
     "# main execution block\n",
     "# if __name__ == '__main__':\n",
-    "#     index_data_in_batches(\"../files/dataset/products.json\", \"products-catalog\", batch_size=100)\n"
+    "#     index_data_in_batches(\"../files/dataset/products.json\", \"products-catalog\", batch_size=100)"
    ]
   },
   {
@@ -240,7 +234,9 @@
     }
    ],
    "source": [
-    "index_data_in_batches(\"../files/dataset/products.json\", \"products-catalog-2\", batch_size=100)"
+    "index_data_in_batches(\n",
+    "    \"../files/dataset/products.json\", \"products-catalog-2\", batch_size=100\n",
+    ")"
    ]
   }
  ],
