--- a/notebooks/search/12-semantic-reranking-elastic-rerank.ipynb
+++ b/notebooks/search/12-semantic-reranking-elastic-rerank.ipynb
@@ -6,7 +6,7 @@
     "id": "tn-NTlKI2EYR"
    },
    "source": [
-    "# Semantic reranking with a Hugging Face model\n",
+    "# Semantic reranking with Elastic Rerank\n",
     "\n",
     "[![Open In Colab](https://colab.research.google.com/assets/colab-badge.svg)](https://colab.research.google.com/github/elastic/elasticsearch-labs/blob/main/notebooks/search/12-semantic-reranking-elastic-rerank.ipynb)\n",
     "\n",
