--- a/notebooks/integrations/aryn/aryn-elasticsearch-blog-dataprep.ipynb
+++ b/notebooks/integrations/aryn/aryn-elasticsearch-blog-dataprep.ipynb
@@ -3,6 +3,17 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "a8f66d95-a9c4-40f1-8cf8-19795653c3f3",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "!pip install sycamore-ai[elasticsearch]\n",
+    "# Install the Sycamore document ETL library: https://github.com/aryn-ai/sycamore "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "id": "60b49e1c-7055-4534-ac09-8b7ab45086d4",
    "metadata": {},
    "outputs": [],
