--- a/notebooks/integrations/aryn/aryn-elasticsearch-blog-dataprep.ipynb
+++ b/notebooks/integrations/aryn/aryn-elasticsearch-blog-dataprep.ipynb
@@ -18,6 +18,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "import os\n",
     "import sycamore\n",
     "from sycamore.context import ExecMode\n",
     "from sycamore.transforms.partition import ArynPartitioner\n",
@@ -32,6 +33,7 @@
     "import pyarrow.fs\n",
     "\n",
     "llm = OpenAI(OpenAIModels.GPT_4O_MINI)\n",
+    "os.environ["ARYN_API_KEY"] = "<MY-ARYN-API-KEY>"\n" 
     "\n",
     "paths = [\"s3://aryn-public/ntsb/\"]\n",
     "\n",
