--- a/notebooks/integrations/jinaai/inference-jinaai.ipynb
+++ b/notebooks/integrations/jinaai/inference-jinaai.ipynb
@@ -25,7 +25,7 @@
     "\n",
     "For this example, you will need:\n",
     "\n",
-    "- An Elastic deployment with minimum **4GB machine learning node**\n",
+    "- An Elastic deployment\n",
     "   - We'll be using [Elastic Cloud](https://www.elastic.co/guide/en/cloud/current/ec-getting-started.html) for this example (available with a [free trial](https://cloud.elastic.co/registration?onboarding_token=vectorsearch&utm_source=github&utm_content=elasticsearch-labs-notebook))\n",
     "\n",
     "- Elasticsearch 8.18 or above.\n",
@@ -46,8 +46,6 @@
     "If you don't have an Elastic Cloud deployment, sign up [here](https://cloud.elastic.co/registration?onboarding_token=vectorsearch&utm_source=github&utm_content=elasticsearch-labs-notebook) for a free trial.\n",
     "\n",
     "- Go to the [Create deployment](https://cloud.elastic.co/deployments/create) page\n",
-    "   - Under **Advanced settings**, go to **Machine Learning instances**\n",
-    "   - You'll need at least **4GB** RAM per zone for this tutorial\n",
     "   - Select **Create deployment**"
    ]
   },
